[package]
name = "bevy_remote"
version = "0.16.1"
edition = "2024"
description = "The Bevy Remote Protocol"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
default = ["http", "bevy_asset", "documentation", "bevy_math"]
http = ["dep:async-io", "dep:smol-hyper"]
documentation = ["bevy_reflect/documentation"]
bevy_math = ["dep:bevy_math", "bevy_reflect/glam"]
bevy_asset = ["dep:bevy_asset"]

[dependencies]
# bevy
bevy_app = { version = "0.16.1" }
bevy_log = "0.16.1"
bevy_derive = { version = "0.16.1" }
bevy_ecs = { version = "0.16.1", features = ["serialize"] }
bevy_reflect = { version = "0.16.1" }
bevy_tasks = { version = "0.16.1" }
bevy_utils = { version = "0.16.1" }
bevy_platform = { version = "0.16.1", default-features = false, features = [
    "std",
    "serialize",
] }
bevy_asset = { version = "0.16.1", optional = true }
glam = { version = "0.29.3", default-features = false, features = [
    "serde",
], optional = true }
bevy_math = { version = "0.16.1", optional = true }
# other
anyhow = "1"
hyper = { version = "1", features = ["server", "http1"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.140" }
http-body-util = "0.1"
async-channel = "2"

[dev-dependencies]
jsonschema = "0.30.0"

# dependencies that will not compile on wasm
[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-io = { version = "2", optional = true }
smol-hyper = { version = "0.1", optional = true }

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]
all-features = true
